@@ -14,6 +14,7 @@ Makefile.PL
 MANIFEST
 META.yml                                 Module meta-data (added by MakeMaker)
 README
+scripts/bump-version-number.pl
 t/01throw.t
 t/02order.t
 t/03throw-non-Error.t
